--- a/style.css
+++ b/style.css
@@ -444,9 +444,11 @@ header {
     top: 0;
     max-width: clamp(65px, 8vw, 80px);
 }
+
 .stamp-left {
     left: 0;
 }
+
 .stamp-right {
     right: 0;
 }
@@ -927,8 +929,77 @@ textarea {
     text-wrap: balance;
 }
 
-.room-detail {
-    
+.room-detail, .hotel-detail {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 2rem;
+    align-items: stretch;
+    padding: clamp(1rem, 2.5vw, 2rem);
+    max-width: 1200px;
+    margin: 2rem auto;
+    box-shadow: var(--box-shadow);
+
+}
+
+.room-img {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.room-img img {
+    display: block;
+    height: 100%;
+    max-height: 80vh;
+    object-fit: cover;
+    object-position: center;
+}
+
+.room-info, .hotel-info {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: space-between;
+    height: 100%;
+}
+
+.room-info p {
+    text-align: center;
+}
+
+.room-info h3 {
+    text-align: left;
+    margin: 0;
+}
+.room-info h3::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--bg-accent);
+    border-radius: 2px;
+}
+
+.fac {
+    columns: 2;
+    margin: 0;
+    margin-top: 1rem;
+    padding: 0;
+    column-gap: 2rem;
+}
+
+.room-info ul {
+    margin: 0.5rem 0;
+}
+
+
+.fac li {
+    break-inside: avoid;
+    display: block;
+    line-height: 2;
 }
 
 /* ==============================
@@ -1148,6 +1219,10 @@ footer .socials {
 
     .logo-link {
         display: none;
+    }
+
+    .fac {
+        columns: 1;
     }
 }
 
