--- a/style.css
+++ b/style.css
@@ -278,6 +278,10 @@ header {
     justify-content: space-between;
 }
 
+.local-nav a {
+        color: var(--accent-dark);
+}
+
 .local-nav::before {
     content: '';
     background-color: var(--bg-medium);
@@ -295,6 +299,11 @@ header {
     gap: 1rem;
     padding: 0.5rem 0;
     margin: 0 auto;
+        font-size: clamp(0.6rem, 1vw, 0.8rem); 
+}
+
+.offers.local-nav a{
+    text-transform: none;
 }
 
 /* ==============================
@@ -556,7 +565,7 @@ header {
 /* ==============================
    CTA
    ============================== */
-.cta {
+.cta, .treatment-transition {
     background: var(--bg-dark);
     color: var(--white);
     display: flex;
@@ -754,6 +763,10 @@ footer .transition a:hover {
     padding: 4rem;
 }
 
+.more {
+    margin-top: 1rem;
+}
+
 /* ==============================
    HOTELL & RESTAURANG
    ============================== */
@@ -861,8 +874,6 @@ footer .transition a:hover {
 .fac li {
     display: block;
 }
-
-
 
 /* ==============================
    KONTAKT / BOKA NU
