working with spill

--- a/style.css
+++ b/style.css
@@ -1465,6 +1465,11 @@ footer .socials {
         margin: 2rem auto;
     }
 
+    .phone {
+        max-width: 80%;
+        margin: 0 auto;
+    }
+
 }
 
 @media screen and (max-width:380px) {
